:iphone: Fix height issue on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -121,6 +121,8 @@ main {
     main {
         display: block;
         padding-top: 5rem;
+        height: auto;
+        min-height: 100vh;
     }
 
     .card {
